# ingestor-reader

./: .dockerignore  .gitignore  Dockerfile  README.md  RENDER_DEPLOYMENT.md  coverage.xml  docker-compose.yml  docker-entrypoint.sh  ecs-task-definition.json  lambda_handler.py  main.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  server.py  test_parser.py  test_state.json
.github/workflows/: build-image.yml  deploy-ecs.yml  test.yml
config/: local.py  production.py  staging.py
config/datasets/: bcra_infomondia_series.yml  indec_emae.yml  indec_ipc.yml
docs/: load_versioning_design.md  projection_design.md  sns_projection_notification_design.md
src/: __init__.py  cli.py
src/application/: __init__.py  etl_use_case.py  plugin_registry.py  (+1 more)
tests/: builders.py  conftest.py  test_atomic_mover.py  test_bcra_infomondia_normalizer.py  test_bcra_infomondia_parser.py  test_bcra_infomondia_transformer.py  test_cli.py  test_date_utils.py  test_dynamodb_lock_manager.py  test_etl_use_case.py  test_etl_with_projection_integration.py  test_excel_utils.py  test_http_extractor.py  test_incremental_updates.py  test_integration.py  test_lock_manager_factory.py  test_manifest_manager.py  test_partition_strategy.py  test_plugin_registry.py  test_plugins_init.py  test_projection_manager.py  test_projection_manifest_manager.py  test_projection_merger.py  test_projection_notification_service.py  test_projection_use_case.py  test_s3_versioned_loader.py  test_staging_manager.py  test_state_manager.py  test_state_manager_factory.py  test_yaml_config_loader.py
(+46 files in other folders)
